# cpp-ft202

./: README.md  SmartPTR.cpp
Задача 1/: ReadMe.md
Задача 1/List_allocator/: List_allocator.sln
Задача 1/Багарякова Мария/: Arrays.sln  LinearArray.cpp
Задача 1/Белянин Андрей/: Arrays.sln
Задача 1/Виталий Вертиков/: Arrays.sln
Задача 1/Горбунов Матвей/: Arrays.cpp
Задача 1/Изаков Артемий/: Array.sln  ReadMe.md
Задача 1/Кормильцев Данил/: Allocators.sln
Задача 1/Левинских Маргарита/: Allocs.sln
Задача 1/Макарова Анна/: Task1.cpp
Задача 1/Меленцова/: LinearAllocator.cpp  PointerMath.h  PoolAllocator.h  StackAllocator.h  main.cpp
Задача 1/Проломова Настя/: Проломова Настя.cpp
Задача 1/Пупышев Василий/: ConsoleApplication1.sln
Задача 1/Ремша Игорь/: Allocator.cpp
Задача 1/Савичев Александр/: List_allocator.sln
Задача 1/Сапожникова Вера/: массивы.sln
Задача 1/Тарасова Анна/: list.cpp  stack.cpp  vector.cpp
Задача 1/Трофимова Светлана/: Alloc.cpp  LinkedList.cpp  Main.cpp  Stack.cpp
Задача 1/Холстинин Дмитрий/: ASArr.cpp
Задача 1/Чернущенко Денис/Allocators/: Allocator.h  Array.h  CMakeLists.txt  LinearAllocator.cpp  LinearAllocator.h  LinkedListAllocator.cpp  LinkedListAllocator.h  MemoryBlock.cpp  MemoryBlock.h  MemoryBlocksContainer.h  StackAllocator.cpp  StackAllocator.h  main.cpp
Задача 1/Чернущенко Денис/Allocators/AllocatorsLib/: Allocator.h  Array.h  CMakeLists.txt  LinearAllocator.cpp  LinearAllocator.h  LinkedListAllocator.cpp  LinkedListAllocator.h  MemoryBlock.cpp  MemoryBlock.h  MemoryBlocksContainer.h  StackAllocator.cpp  StackAllocator.h
Задача 1/Чернущенко Денис/Allocators/AllocatorsLibTests/: AllocatorsTests.cpp
Задача 2/: ReadMe.md
Задача 2/Алексей Чижов/: Source.cpp
Задача 2/Багарякова Мария/: Allocator.sln
Задача 2/Белянин Андрей/: Alloc.sln
Задача 2/Вертиков Виталий/: BuddyAllocator.cpp
Задача 2/Горбунов Матвей/: Main.cpp  buddy.cpp  buddy.h  chunk.cpp  chunk.h
Задача 2/Гренц Анастасия/: Alloc.cpp  Alloc.h  Alloc.vcxproj  Alloc.vcxproj.filters  Block.cpp  Block.h  readme
Задача 2/Изаков Артемий/: Allocator.sln
Задача 2/Кормильцев Данил/: BuddyAllocator.cpp
Задача 2/Левинских Маргарита/: BuddyAlloc.cpp
Задача 2/Макарова Анна/: Allocator.cpp
Задача 2/Меленцова Алена/: BuddyAlloc.c  BuddyAlloc.h  main.c
Задача 2/Пашков Евгений/: Система двойников.sln
Задача 2/Петров Сергий/: main.cpp
Задача 2/Проломова Настя/: Проломова Настя.cpp
Задача 2/Ремша Игорь/: Allocator.cpp
Задача 2/Савичев Александр/: Allocator.sln
Задача 2/Сапожникова Вера/: allocator.sln
Задача 2/Тарасова Анна/: allocator.cpp
Задача 2/Холстинин Дмитрий/: buddyalloc.cpp
Задача 2/Чернущенко Денис/BuddyAllocator/: CMakeLists.txt  main.cpp
Задача 2/Чернущенко Денис/BuddyAllocator/BuddyAllocatorLib/: Allocator.cpp  Allocator.h  BlockStatus.h  BorderDescriptor.cpp  BorderDescriptor.h  CMakeLists.txt
Задача 2/Чернущенко Денис/BuddyAllocator/BuddyAllocatorLibTests/: AllocatorTests.cpp  CMakeLists.txt  TestsRunner.cpp  TestsRunner.h
Задача 3/: ReadMe.md
Задача 3/Багарякова Мария/: SmartPtr.sln
Задача 3/Бунцев Дмитрий/: SmartPointer.cpp
Задача 3/Вертиков Виталий/: SmartPtr.cpp
Задача 3/Гренц Анастасия/: SmartPointer.cpp
Задача 3/Изаков Артемий/: SmartPointer.sln
Задача 3/Левинских Маргарита/: SmartPtr.sln
Задача 3/Макарова Анна/: SmartPointer.cpp
Задача 3/Чернущенко Денис/SmartPointer/: CMakeLists.txt  main.cpp
Задача 3/Чернущенко Денис/SmartPointer/SmartPointerLib/: CMakeLists.txt  SmartPointer.cpp
Задача 3/Чернущенко Денис/SmartPointer/SmartPointerLibTests/: CMakeLists.txt  SmartPointerTests.cpp  TestsRunner.cpp  TestsRunner.h
Задачв 3/: ReadMe.md
Сапожникова Вера/: массивы.sln
(+370 files in other folders)
